--- a/GameThis/res/values/strings.xml
+++ b/GameThis/res/values/strings.xml
@@ -2,7 +2,12 @@
 <resources>
 
     <string name="app_name">GameThis</string>
-    <string name="hello_world">Hello world 2!</string>
+    <string name="hello_world">GameThis!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="botao_tela_login">Login</string>
+    <string name="botao_tela_inscricao">Inscreva-se</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_inscricao">InscricaoActivity</string>
 
 </resources>
