--- a/GameThis/res/values/strings.xml
+++ b/GameThis/res/values/strings.xml
@@ -26,7 +26,8 @@
     <!-- Tela Pesquisar Usuario -->
     <string name="search_pesquisar_jogador">Pesquisar Usuário</string>
     <string name="search_hint_jogadores">Email do jogador</string>
-	<string name="texto_jogadores_adicionados">Jogadores adicionados:</string>    
+	<string name="texto_jogadores_adicionados">Jogadores adicionados</string>   
+	<string name="ok_confirmar_lista_jogadores">Ok!</string> 
     
     
 
