Pequenos ajustes realizados em relação à interface

--- a/GameThis/res/values/strings.xml
+++ b/GameThis/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="ok_confirmar_lista_atividades">OK!</string>
     
     <string name="texto_botao_add_nova_atividade">Nova Atividade</string>
-    
+    <string name="textoPontosAtividadeInfo">Pts.</string>
     
     
     
