--- a/GameThis/res/values/strings.xml
+++ b/GameThis/res/values/strings.xml
@@ -12,6 +12,12 @@
     <string name="title_activity_jogadores">Jogadores</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_atividades">Atividades</string>
+    <string name="title_activity_pesquisar_usuario">Pesquisar Jogador</string>
+    <string name="title_activity_cadastro_atividade">Cadastro de Atividade</string>
+    <string name="title_activity_jogos_convidado">Convidado</string>
+    <string name="title_activity_detalhes_jogo_convidado">Detalhes do Jogo</string>
+    <string name="title_activity_meus_jogos">Meus Jogos</string>
+    <string name="title_activity_jogos_gerenciados">Jogos Gerenciados</string>
 
     <!-- Tela Novo Jogo -->
     <string name="texto_input_descricao_jogo">Descrição</string>
@@ -20,7 +26,6 @@
     <string name="texto_botao_add_jogadores">+ Jogadores </string>
     <string name="texto_botao_add_atividades">+ Atividades </string>
     <string name="texto_botao_iniciar_jogo">Criar Jogo </string>
-    <string name="title_activity_pesquisar_usuario">PesquisarUsuarioActivity</string>
 
     <!-- Tela Pesquisar Jogador -->
     <string name="search_pesquisar_jogador">Pesquisar Usuário</string>
@@ -30,7 +35,6 @@
 
     <!-- Tela Inserir Atividades -->
     <string name="texto_input_descricao_atividade">Descrição</string>
-    <string name="title_activity_cadastro_atividade">Cadastro de Atividade</string>
     <string name="texto_pontos">Pontos:</string>
     <string name="texto_duracao_atividade">Duração:</string>
     <string name="texto_detalhe_duracao_atividade">(dias)</string>
@@ -41,15 +45,18 @@
     <string name="textoPontosAtividadeInfo">Pts.</string>
 
     <!-- Tela Meus Jogos (tela principal) -->
-    <string name="title_activity_meus_jogos">Meus Jogos</string>
     <string name="texto_botao_jogos_gerenciados">Gerenciados</string>
     <string name="texto_botao_jogos_convidados">Convidado</string>
-    
-    <!-- Tela Jogos Gerenciados -->
-    <string name="title_activity_jogos_gerenciados">Jogos Gerenciados</string>
-    
-    <!-- Tela Jogos Convidado -->
-    <string name="title_activity_jogos_convidado">Convidado</string>
 
+    <!-- Tela Jogos Gerenciados -->
+
+    <!-- Tela Jogos Convidado -->
     
+    
+    
+    
+    
+    
+    
+
 </resources>
